# VHLog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buildscript.sh  cppcheck_report.txt  debBuildscript.sh  runcppcheck.sh
.cache/clangd/index/: VHLog.cpp.63FF749F39DF2671.idx  VHLog.h.4F96DC7806C42A92.idx  hello.cpp.8B6A965C7DB2660E.idx
bench/: Benchmark.cpp
examples/: HelloVHLog.cpp  hello.cpp
include/: VHLog.h
src/: VHLog.cpp
